erDiagram
    users {
        string id PK
        string email
        string password_hash
        string* user_role
        bool active 
    }

    clients {
        string id PK
        string name
    }

    apps {
        string id PK
        string name
    }

    client_apps {
        string id PK
        string name UK
        bool active
        string app_id FK
        string client_id FK
        string* api_key_hash
        bool* current_status
        jsonb* current_status_data
        timestamptz* current_status_datetime
    }

    sessions {
        string id PK
        timestamptz expires_at
        string user_id FK
    }

    users ||--o{ sessions : ""
    clients ||--o{ client_apps : ""
    apps ||--o{ client_apps : ""